--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.4.1",
+    "express-xss-sanitizer": "^1.2.0",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
